# kara-assistant

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  build.rs  kara.toml
.github/workflows/: ci.yml
crates/asr/: Cargo.toml  build.rs
crates/asr/src/: lib.rs
crates/asr/src/sources/: kara.rs  mod.rs
crates/audio-utils/: Cargo.toml
crates/audio-utils/src/: lib.rs
crates/audio-utils/src/fft/: mod.rs
crates/audio-utils/src/window/: mod.rs
crates/kara/: Cargo.toml
crates/kara/src/: events.rs  logger.rs  main.rs
crates/kara/src/audio/: asr.rs  mod.rs
crates/kara/src/cli/: mod.rs
crates/kara/src/config/: cli.rs  file.rs  mod.rs  monitor.rs  watch.rs
crates/kara/src/graphics/: audio.rs  controls.rs  mod.rs  scene.rs  vertex.rs  vis.rs
crates/kara/src/graphics/assets/: shader.wgsl
crates/mic-rec/: Cargo.toml
crates/mic-rec/src/: audio_utils.rs  errors.rs  lib.rs  tests.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/res-def/: Cargo.toml
crates/res-def/src/: lib.rs
crates/res-get/: Cargo.toml
crates/res-get/src/: lib.rs
crates/res-get/src/tests/: mod.rs
examples/: example.kara.json  example.kara.yaml  kara.toml
kara-assets/: shader.wgsl
kara-audio/: Cargo.toml
kara-audio/src/: lib.rs
kara-audio/src/stream/: mod.rs  processing.rs
kara-audio/src/stt_sources/: kara.rs  mod.rs
kara-core/: cli.rs  config.rs  debug.rs  gui.rs  main.rs  wgpu.rs
