[package]
name = "kara-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-appender = "0.2.2"
dirs = "4.0.0"

[workspace]

[[bin]]
path = "kara-core/main.rs"
name = "kara"
