[package]
name = "kara-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-appender = "0.2.2"
dirs = "4.0.0"
clap = { version = "3.1.12", features = [ "derive" ] }
iced_winit = { git = "https://github.com/iced-rs/iced" }
iced_wgpu = { git = "https://github.com/iced-rs/iced", features = [ "webgl" ] }
anyhow = "1.0.57"
kara-audio = { path = "./kara-audio"}
bytemuck = { version = "1.9.1", features = [ "derive" ] }
tokio = { version = "1.18.0", features = [ "macros", "rt-multi-thread" ] }

[workspace]
members = [
  "kara-audio",
]

[[bin]]
path = "kara-core/main.rs"
name = "kara"
