[package]
name = "kara-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
rustfft = "6.0.1"
cpal = "0.13.5"
apodize = "1.0.0"
coqui-stt = "0.3.0"
tokio = { version = "1.18.0", features = [ "rt-multi-thread" ] }
rubato = "0.12.0"
iced_winit = { git = "https://github.com/iced-rs/iced" }
serde = { version = "1.0.137", features = [ "derive" ] }
anyhow = "1.0.57"
gag = "1.0.0"
