[package]
name = "asr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
gag = "1.0.0"
res-def = { version = "0.1.0", path = "../res-def" }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["sync"] }
tracing = "0.1.37"
vosk = "0.2.0"
