[package]
name = "kara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
asr = { version = "0.1.0", path = "../asr" }
audio-utils = { version = "0.1.0", path = "../audio-utils" }
bytemuck = { version = "1.12.2", features = ["derive"], optional = true }
clap = { version = "4.0.23", features = ["derive"] }
crossbeam-channel = "0.5.6"
iced_wgpu = { git = "https://github.com/iced-rs/iced", optional = true }
iced_winit = { git = "https://github.com/iced-rs/iced", optional = true }
mic-rec = { version = "0.1.0", path = "../mic-rec" }
notify = "5.0.0"
palette = { version = "0.6.1", optional = true }
res-def = { version = "0.1.0", path = "../res-def" }
res-get = { version = "0.1.0", path = "../res-get" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.91", optional = true }
serde_yaml = { version = "0.9.16", optional = true }
tokio = { version = "1.21.2", features = ["full"] }
toml = { version = "0.5.9", optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["local-time", "env-filter"] }

[features]
default = ["commandline", "graphical", "toml"]
graphical = ["bytemuck", "iced_wgpu", "iced_winit", "palette"]
commandline = []
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
