[package]
name = "mic-rec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-utils = { version = "0.1.0", path = "../audio-utils" }
cpal = "0.14.1"
crossbeam-channel = "0.5.6"
thiserror = "1.0.37"
tracing = "0.1.37"
