[package]
name = "res-get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
futures-util = "0.3.25"
reqwest = { version = "0.11.12", features = ["stream"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["fs"] }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros"] }
