[package]
name = "res-get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
futures-util = "0.3.26"
gag = "1.0.0"
notify-rust = "4.7.0"
reqwest = { version = "0.11.14", features = ["stream"] }
res-def = { version = "0.1.0", path = "../res-def" }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["fs"] }
tracing = "0.1.37"
zip = "0.6.4"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros"] }
